--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AXI-Traffic-Checker"]
 	path = AXI-Traffic-Checker
 	url = https://github.com/ikwzm/AXI-Traffic-Checker.git
+[submodule "ZynqMP-ACP-Adapter"]
+	path = ZynqMP-ACP-Adapter
+	url = https://github.com/ikwzm/ZynqMP-ACP-Adapter.git
